@@ -1,8 +1,7 @@
 '''
-language : Python 3.x
+repo : https://github.com/openmarmot/smol_aws_engineer
 email : andrew@openmarmot.com
-notes :
-github : https://github.com/openmarmot/smol_aws_engineer
+notes : 
 '''
 
 from flask import Flask, request, render_template, jsonify
