@@ -1,12 +1,12 @@
 '''
-language : Python 3.x
+repo : https://github.com/openmarmot/smol_aws_engineer
 email : andrew@openmarmot.com
-notes :
-github : https://github.com/openmarmot/smol_aws_engineer
+notes : smolagents code_agent code
 '''
 
 from smolagents.agents import CodeAgent
 from smolagents import OpenAIServerModel, DuckDuckGoSearchTool
+from tools.aws_tools import get_aws_ec2_instances
 
 
 def run_agent(query):
@@ -20,7 +20,7 @@ def run_agent(query):
     )
 
     # note - adding the duckduckgo search tool tends to cause it to search instead of write boto3 code
-    tools=[]
+    tools=[get_aws_ec2_instances]
     python_imports=["boto3","json"]
     
     agent = CodeAgent(tools=tools, model=model,max_steps=10,additional_authorized_imports=python_imports)
